runs/runs/github.com/SciTools/courses/logs/test-notebook-course_content-extra_courses-solutions-numpy_exercise_1.ipynb-2020-07-07T08.02.txt
[I 200707 08:03:36 inrepo:35] Testing notebook course_content/extra_courses/solutions/numpy_exercise_1.ipynb
[I 200707 08:03:37 execute:404] Executing notebook with kernel: python
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
A = np.arange(1, 9).reshape(2, -1)
print A
------------------

[0;36m  File [0;32m"<ipython-input-1-dbd6507b12ff>"[0;36m, line [0;32m3[0m
[0;31m    print A[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(A)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(A)? (<ipython-input-1-dbd6507b12ff>, line 3)


Container exited with status: {'Error': None, 'StatusCode': 1}
